--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8"/>
         <link rel="icon" type="image/svg+xml" href="/icons/stratagems/eagle_airstrike.svg"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"/>
+        <meta name="screen-orientation" content="landscape">
         <title>helldivers</title>
     </head>
-    <body style="margin: 0;padding: 0;width: 100%;height: 100%">
+    <body style="margin: 0;padding: 0;width: 100vw;height: 100vh">
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
